2001-11-21 12:31 GMT Dave Pearson <davep@davep.org>
   * source/rdd/dbcmd.c
     - Removed (using "#if 0...") hb_waNull().

2001-11-21 09:15 GMT -3 Luiz Rafael Culik<culik@sl.conex.net>
   * source/debug/debugger.prg
   * sorce/debug/dbgtarr.prg
      * Fixed an small bug that was forget to fix on previus upload

2001-11-21 06:35 GMT -3 Luiz Rafael Culik<culik@sl.conex.net>
   * source/debug/debugger.prg
      * Some enhacements, now you can use the Pgup/pgdown keys.
   * source/common/hbfspai.c
      * Added code to make harbour apps compiler with borland compiler open mode then 50 files
   * source/rtl/tbrowse.prg
      * reverted back to version 1.69 of maurilio

2001-11-20 22:45 UTC-0500 David G. Holm <dholm@jsd-llc.com>

  * source/compiler/harbour.y
  * source/macro/macro.y
    ! Exclude IBM C++ from the declaration of __yy_memcpy.

2001-11-20 23:59 GMT+1 Maurilio Longo <maurilio.longo@libero.it>
   * source/debug/debugger.prg
     ! ::ShowCode() was using At( ":", cModuleName ) to divide procedure name from module name,
       but this does not work if you have a source file on a different disk (at least on those
       systems which use a letter and a colon to name volumes).

2001-11-20 21:02 UTC+0100 Viktor Szakats <viktor.szakats@syenar.hu>

   * source/lang/Makefile
     + Added missing language.

   * source/lang/msgruwin.c
   * source/lang/msgzhb5.c
   * source/lang/msgzhgb.c
     * Small changes.

2001-11-20 16:36 GMT-3 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * source/rdd/dbfcdx/dbfcdx1.c
     + added support for AUTO OPEN
     ! fixed ordListAdd() if the index has no path, try first the
       path of the dbf.
     ! fixed ordBagName(), now returns full pathname

2001-11-20 20:11 UTC+0100 Viktor Szakats <viktor.szakats@syenar.hu>

   * doc/howtomak.txt
     * Changed the requirement to Bison 1.28

   * source/common/hbver.c
     + Displays the HB_FM_STATISTICS setting in the /BUILD or //BUILD
       switches.
