@@ -4617,10 +4617,11 @@ ERRCODE hb_cdxGoTo( CDXAREAP pArea, ULONG ulRecNo )
 
    if( SUPER_GOTO( ( AREAP ) pArea, ulRecNo ) == FAILURE )
       return FAILURE;
-   /*
+
    if ( pArea->fEof )
-      return FAILURE;
-   */
+      /* return FAILURE; */
+      return SUCCESS;
+
    pTag = hb_cdxGetActiveTag( pArea->lpIndexes );
    if ( ! pTag )
       return SUCCESS;
